// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonComponent should match previous snapshot 1`] = `
<styled.div
  display="flex"
  flexDirection="column"
  marginTop="10px"
>
  <InputComponent
    disabled={false}
    id="inp"
    isErrorMessage={false}
    placeholder=""
    type="text"
  />
  <LabelComponent
    color="initial"
    forId="inp"
    order="-1"
    textStyle="brevier"
  >
    Labeled Input
  </LabelComponent>
  <SubTextComponent
    color="initial"
    isErrorMessage={false}
  />
  <SubTextComponent
    isErrorMessage={true}
  />
</styled.div>
`;

exports[`RadioButtonComponent should match previous snapshot for disabled state 1`] = `
<styled.div
  display="flex"
  flexDirection="column"
  marginTop="10px"
>
  <InputComponent
    disabled={true}
    id="inp"
    isErrorMessage={false}
    placeholder=""
    type="text"
  />
  <LabelComponent
    color="#707070"
    forId="inp"
    order="-1"
    textStyle="brevier"
  >
    Labeled Input
  </LabelComponent>
  <SubTextComponent
    color="#707070"
    isErrorMessage={false}
  />
  <SubTextComponent
    isErrorMessage={true}
  />
</styled.div>
`;

exports[`RadioButtonComponent should match previous snapshot for labeled input with custom placeholder 1`] = `
<styled.div
  display="flex"
  flexDirection="column"
  marginTop="10px"
>
  <InputComponent
    disabled={false}
    id="inp"
    isErrorMessage={false}
    placeholder="Enter details here"
    type="text"
  />
  <LabelComponent
    color="initial"
    forId="inp"
    order="-1"
    textStyle="brevier"
  >
    Labeled Input
  </LabelComponent>
  <SubTextComponent
    color="initial"
    isErrorMessage={false}
  />
  <SubTextComponent
    isErrorMessage={true}
  />
</styled.div>
`;

exports[`RadioButtonComponent should match previous snapshot for labeled input with hint 1`] = `
<styled.div
  display="flex"
  flexDirection="column"
  marginTop="10px"
>
  <InputComponent
    disabled={false}
    id="inp"
    isErrorMessage={false}
    placeholder=""
    type="text"
  />
  <LabelComponent
    color="initial"
    forId="inp"
    order="-1"
    textStyle="brevier"
  >
    Labeled Input
  </LabelComponent>
  <SubTextComponent
    color="initial"
    isErrorMessage={false}
  >
    User hint
  </SubTextComponent>
  <SubTextComponent
    isErrorMessage={true}
  />
</styled.div>
`;

exports[`RadioButtonComponent should match previous snapshot for labeled input with specified type 1`] = `
<styled.div
  display="flex"
  flexDirection="column"
  marginTop="10px"
>
  <InputComponent
    disabled={false}
    id="inp"
    isErrorMessage={false}
    placeholder=""
    type="password"
  />
  <LabelComponent
    color="initial"
    forId="inp"
    order="-1"
    textStyle="brevier"
  >
    Labeled Input
  </LabelComponent>
  <SubTextComponent
    color="initial"
    isErrorMessage={false}
  />
  <SubTextComponent
    isErrorMessage={true}
  />
</styled.div>
`;

exports[`RadioButtonComponent should match previous snapshot for labeled input with validation error 1`] = `
<styled.div
  display="flex"
  flexDirection="column"
  marginTop="10px"
>
  <InputComponent
    disabled={false}
    error={true}
    id="inp"
    isErrorMessage={false}
    placeholder=""
    type="text"
  />
  <LabelComponent
    color="initial"
    forId="inp"
    order="-1"
    textStyle="brevier"
  >
    Labeled Input
  </LabelComponent>
  <SubTextComponent
    color="initial"
    isErrorMessage={false}
  />
  <SubTextComponent
    isErrorMessage={true}
  />
</styled.div>
`;
